--- a/app/index.html
+++ b/app/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <link href='https://fonts.googleapis.com/css?family=Roboto:400,100,300,500,700' rel='stylesheet' type='text/css'>
-  <title>Clear View Escapes</title>
+  <title>MANCHESTER UNITED</title>
   <meta name="keywords" content="Travel planning, travel bundles, travel escapes,affordable places">
   <meta name="description" content="Your clarity. One trip away. We create soul restoring journeys that inspire you to be you.">
 
@@ -11,22 +11,23 @@
   <link rel='stylesheet' href="C:/Users/user/Desktop/Projects/travel-site/node_modules/normalize.css/normalize.css">
 </head>
 <body>
-  <header class="site-header">
+  <header id="top" class="site-header">
     <div class="wrapper">
       <div class="site-header__logo">
-        <img src="assets/images/icons/clear-view-escapes.svg">
+        <img src="assets/images/icons/manu-logo.svg">
       </div>
 
       <div class="site-header__menu-icon"></div>
       <div class="site-header__menu-content">
         <div class="site-header__btn-container">
-          <a href="#" class="btn">Get in Touch</a>
+          <a href="#" class="btn">SIGN UP</a>
         </div>
         <nav class="primary-nav primary-nav--pull-right">
           <ul>
-            <li><a href="#our-beginning">Our Beginning</a></li>
-            <li><a href="#features">Features</a></li>
-            <li><a href="#testimonials">Testimonials</a></li>
+            <li><a href="#home">HOME</a></li>
+            <li><a href="#news">NEWS</a></li>
+            <li><a href="#squad">SQUAD</a></li>
+            <li><a href="#fixtures">FIXTURES</a></li>
           </ul>
         </nav>  
       </div>
@@ -36,40 +37,39 @@
   <div class="large-hero">
 
     <picture>
-    <source srcset="assets/images/hero--large.jpg 1920w, assets/images/hero--large-hi-dpi.jpg 3840w" media="(min-width: 1380px)">
-    <source srcset="assets/images/hero--medium.jpg 1380w, assets/images/hero--medium-hi-dpi.jpg 2760w" media="(min-width: 990px)">
-    <source srcset="assets/images/hero--small.jpg 990w, assets/images/hero--small-hi-dpi.jpg 1980w" media="(min-width: 640px)">
-    <img srcset="assets/images/hero--smaller.jpg 640w, assets/images/hero--smaller-hi-dpi.jpg 1280w" class="large-hero__image" alt="Coastal view of ocean and mountains">
+ 
+    <img srcset="assets/images/manu-1.jpg" class="large-hero__image" alt="Stadium">
     </picture>
     
     <div class="large-hero__text-content">
       <div class="wrapper">
-        <h1 class="large-hero__title">Your clarity.</h1>
-        <h2 class="large-hero__subtitle">One trip away.</h2>
-        <p class="large-hero__description">We create soul restoring journeys that inspire you to be you.</p>
-        <p><a href="#" class="btn btn--orange btn--large">Get Started Today</a></p>
+        <h1 class="large-hero__title">Manchester United</h1>
+        <h2 class="large-hero__subtitle">A Legendary Era</h2>
+        <p class="large-hero__description"><I>"Its about the Hopes and the Dreams."</I></p>
+        <p><a href="#" class="btn--large">Are you A United Fan</a></p>
       </div>
     </div>
   </div>
 
   <div id="our-beginning" class="page-section">
     <div class="wrapper">
-      <h2 class="headline headline--centered headline--light headline--b-margin-small">The first trip we planned <strong>was our own.</strong></h2>
-      <h3 class="headline headline--centered headline--orange headline--small headline--narrow headline--light headline--b-margin-large">Ever since, we&rsquo;ve been working to make travel <strong>better for everyone.</strong></h3>
+      <h2 class="headline headline--centered headline--light headline--b-margin-small">We never play for a draw <strong>in our life.</strong></h2>
+      <h3 class="headline headline--centered headline--orange headline--small headline--narrow headline--light headline--b-margin-large">Every game is like showboating ourself <strong>better than everyone.</strong></h3>
       <div class="wrapper wrapper--medium wrapper--b-margin">
-        <img src="assets/images/first-trip.jpg" alt="Couple walking down a street.">
+        <img src="assets/images/manu-squad.jpg" alt="Manchester-united_lineup">
+        </div>
       </div>
 
       <div class="row row--gutters">
       <div class="row__4 row__4--larger row__b-margin-medium">
-        <img src="assets/images/our-start.jpg" alt="Our founder, Jane Doe">
+        <img src="assets/images/manu-leader.jpg" alt="Our Idol,Sir Alex Ferguson">
       </div>
       <div class="row__8 row__8--smaller">
-        <div class="generic-content-container">
-          <h2 class="headline headline--no-t-margin">Here&rsquo;s how we got started&hellip;</h2>
-          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, <a href="#">quis nostrud exercitation</a> ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-          <p>Duis aute irure dolor in <strong>reprehenderit in</strong> voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-          <p>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum velit esse cillum <strong>dolore eu fugiat.</strong></p>
+        <div class="generic-content-container headline--orange">
+          <h2 class="headline headline--no-t-margin">Sir Alex <strong>Ferguson</strong></h2>
+          <p>I've never played for a draw in my life.</p>
+          <p>I feel sympathy for the working class lad. I've always championed about ticket prices and try to equate that to people's salaries.Ferguson played as a forward for several Scottish clubs, including Dunfermline Athletic and Rangers. While playing for Dunfermline, he was the top goalscorer in the Scottish league in the 1965–66 season. Towards the end of his playing career he also worked as a coach, then started his managerial career with East Stirlingshire and St Mirren. Ferguson then enjoyed a highly successful period as manager of Aberdeen, winning three Scottish league championships, four Scottish Cups and the UEFA Cup Winners' Cup in 1983. He briefly managed Scotland following the death of Jock Stein, taking the team to the 1986 World Cup.</p>
+          <p>If I have my health I can carry on. There will be a point when I do quit but I have absolutely no idea when that is. Ferguson was appointed manager of Manchester United in November 1986. During his 26 years with Manchester United he won 38 trophies, including 13 Premier League titles, five FA Cups, and two UEFA Champions League titles.He was knighted in the 1999 Queen's Birthday Honours list for his services to the game.Ferguson is the longest-serving manager of Manchester United, having overtaken Sir Matt Busby's record on 19 December 2010. He retired from management at the end of the 2012–13 season, having won the Premier League in his final season.</p>
         </div> 
       </div>  
       </div>
@@ -116,15 +116,15 @@
   <div id="testimonials" class="page-section page-section--testimonials">
     <div class="wrapper">
       
-      <h2 class="section-title section-title--blue"><img class="section-title__icon" src="assets/images/icons/comment.svg">Real <strong>Testimonials</strong></h2>
+      <h2 class="section-title section-title--blue"><img class="section-title__icon" src="assets/images/icons/comment.svg">Real <strong>Legends</strong></h2>
 
       <div class="row row--gutters row--gutters-small row--t-padding generic-content-container">
         <div class="row__4">
           <div class="testimonial">
             <div class="testimonial__photo">
-              <img src="assets/images/testimonial-jane.jpg">
+              <img src="assets/images/eric-2.jpg">
             </div>
-            <h3 class="testimonial__title">Jane Doe</h3>
+            <h3 class="testimonial__title">Eric Cantona</h3>
             <h4 class="testimonial__subtitle">9 Time Escaper</h4>
             <p>&ldquo;Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.&rdquo;</p>
           </div>
@@ -132,9 +132,9 @@
         <div class="row__4">
           <div class="testimonial">
             <div class="testimonial__photo">
-              <img src="assets/images/testimonial-john.jpg">
+              <img src="assets/images/david-2.jpg">
             </div>
-            <h3 class="testimonial__title">John Smith</h3>
+            <h3 class="testimonial__title">David Beckham</h3>
             <h4 class="testimonial__subtitle">4 Time Escaper</h4>
             <p>&ldquo;Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Lorem ipsum dolor sit amet, consectetur.&rdquo;</p>
           </div>
@@ -142,9 +142,9 @@
         <div class="row__4">
           <div class="testimonial testimonial--last">
             <div class="testimonial__photo">
-              <img src="assets/images/testimonial-cat.jpg">
+              <img src="assets/images/ryan-2.jpg">
             </div>
-            <h3 class="testimonial__title">Cat McKitty</h3>
+            <h3 class="testimonial__title">Ryan Giggs</h3>
             <h4 class="testimonial__subtitle">6 Time Escaper</h4>
             <p>&ldquo;Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut.&rdquo;</p>
           </div>
@@ -155,7 +155,7 @@
 
   <footer class="site-footer">
     <div class="wrapper">
-      <p><span class="site-footer__text">Copyright &copy; 2019 Clear View Escapes. All rights reserved.</span> <a href="#" class="btn btn--orange">Get in Touch</a></p>
+      <p><span class="site-footer__text">Copyright &copy; 2020 Manchester United. All rights reserved.</span> <a href="#top" class="btn btn--orange">Back To The Top</a></p>
     </div>
   </footer>
   <!-- Leave this commented out HTML here until you need it for an upcoming "modal" lesson
