--- a/app/index.html
+++ b/app/index.html
@@ -61,17 +61,17 @@
       </div>
 
       <div class="row row--gutters">
-      <div class="row__4 row__4--larger row__b-margin-medium">
-        <img src="assets/images/manu-leader.jpg" alt="Our Idol,Sir Alex Ferguson">
-      </div>
-      <div class="row__8 row__8--smaller">
-        <div class="generic-content-container headline--orange">
-          <h2 class="headline headline--no-t-margin">Sir Alex <strong>Ferguson</strong></h2>
-          <p>I've never played for a draw in my life.</p>
-          <p>I feel sympathy for the working class lad. I've always championed about ticket prices and try to equate that to people's salaries.Ferguson played as a forward for several Scottish clubs, including Dunfermline Athletic and Rangers. While playing for Dunfermline, he was the top goalscorer in the Scottish league in the 1965–66 season. Towards the end of his playing career he also worked as a coach, then started his managerial career with East Stirlingshire and St Mirren. Ferguson then enjoyed a highly successful period as manager of Aberdeen, winning three Scottish league championships, four Scottish Cups and the UEFA Cup Winners' Cup in 1983. He briefly managed Scotland following the death of Jock Stein, taking the team to the 1986 World Cup.</p>
-          <p>If I have my health I can carry on. There will be a point when I do quit but I have absolutely no idea when that is. Ferguson was appointed manager of Manchester United in November 1986. During his 26 years with Manchester United he won 38 trophies, including 13 Premier League titles, five FA Cups, and two UEFA Champions League titles.He was knighted in the 1999 Queen's Birthday Honours list for his services to the game.Ferguson is the longest-serving manager of Manchester United, having overtaken Sir Matt Busby's record on 19 December 2010. He retired from management at the end of the 2012–13 season, having won the Premier League in his final season.</p>
-        </div> 
-      </div>  
+        <div class="row__4 row__4--larger row__b-margin-medium">
+          <img src="assets/images/manu-leader.jpg" alt="Our Idol,Sir Alex Ferguson">
+        </div>
+        <div class="row__8 row__8--smaller">
+          <div class="generic-content-container headline--orange">
+            <h2 class="headline headline--no-t-margin">Sir Alex <strong>Ferguson</strong></h2>
+            <p>I've never played for a draw in my life.</p>
+            <p>I feel sympathy for the working class lad. I've always championed about ticket prices and try to equate that to people's salaries.Ferguson played as a forward for several Scottish clubs, including Dunfermline Athletic and Rangers. While playing for Dunfermline, he was the top goalscorer in the Scottish league in the 1965–66 season. Towards the end of his playing career he also worked as a coach, then started his managerial career with East Stirlingshire and St Mirren. Ferguson then enjoyed a highly successful period as manager of Aberdeen, winning three Scottish league championships, four Scottish Cups and the UEFA Cup Winners' Cup in 1983. He briefly managed Scotland following the death of Jock Stein, taking the team to the 1986 World Cup.</p>
+            <p>If I have my health I can carry on. There will be a point when I do quit but I have absolutely no idea when that is. Ferguson was appointed manager of Manchester United in November 1986. During his 26 years with Manchester United he won 38 trophies, including 13 Premier League titles, five FA Cups, and two UEFA Champions League titles.He was knighted in the 1999 Queen's Birthday Honours list for his services to the game.Ferguson is the longest-serving manager of Manchester United, having overtaken Sir Matt Busby's record on 19 December 2010. He retired from management at the end of the 2012–13 season, having won the Premier League in his final season.</p>
+          </div> 
+        </div>  
       </div>
     </div>
   </div>
@@ -116,7 +116,7 @@
   <div id="testimonials" class="page-section page-section--testimonials">
     <div class="wrapper">
       
-      <h2 class="section-title section-title--blue"><img class="section-title__icon" src="assets/images/icons/comment.svg">Real <strong>Legends</strong></h2>
+      <h2 class="section-title section-title--blue"><img class="section-title__icon" src="assets/images/icons/legend-1.png">Real <strong>Legends</strong></h2>
 
       <div class="row row--gutters row--gutters-small row--t-padding generic-content-container">
         <div class="row__4">
