Completed desktop and mobile header styles.

--- a/app/index.html
+++ b/app/index.html
@@ -176,5 +176,6 @@
     <div class="modal__close">X</div>
   </div>
   This is the end of the "modal" reference HTML -->
+  <script src="C:/Users/user/Desktop/Projects/travel-site/app/temp/scripts/App.js"></script>
 </body>
 </html>
