--- a/app/index.html
+++ b/app/index.html
@@ -7,8 +7,8 @@
   <meta name="keywords" content="Travel planning, travel bundles, travel escapes,affordable places">
   <meta name="description" content="Your clarity. One trip away. We create soul restoring journeys that inspire you to be you.">
 
-  <link rel='stylesheet' href="C:/Users/user/Desktop/Projects/travel-site/app/assets/styles/styles.css">
-  <link rel='stylesheet' href="C:/Users/user/Desktop/Projects/travel-site/node_modules/normalize.css/normalize.css">
+  <link rel='stylesheet' href="assets/styles/styles.css">
+  <script src="./temp/scripts/Vendor.js"></script>
 </head>
 <body>
   <header class="site-header">
@@ -57,12 +57,12 @@
       <h2 class="headline headline--centered headline--light headline--b-margin-small">The first trip we planned <strong>was our own.</strong></h2>
       <h3 class="headline headline--centered headline--orange headline--small headline--narrow headline--light headline--b-margin-large">Ever since, we&rsquo;ve been working to make travel <strong>better for everyone.</strong></h3>
       <div class="wrapper wrapper--medium wrapper--b-margin">
-        <img src="assets/images/first-trip.jpg" alt="Couple walking down a street.">
+        <img class="lazyload" data-src="assets/images/first-trip.jpg" alt="Couple walking down a street.">
       </div>
 
       <div class="row row--gutters">
       <div class="row__4 row__4--larger row__b-margin-medium">
-        <img src="assets/images/our-start.jpg" alt="Our founder, Jane Doe">
+        <img class="lazyload" data-src="assets/images/our-start.jpg" alt="Our founder, Jane Doe">
       </div>
       <div class="row__8 row__8--smaller">
         <div class="generic-content-container">
@@ -122,7 +122,7 @@
         <div class="row__4">
           <div class="testimonial">
             <div class="testimonial__photo">
-              <img src="assets/images/testimonial-jane.jpg">
+              <img class="lazyload" data-src="assets/images/testimonial-jane.jpg">
             </div>
             <h3 class="testimonial__title">Jane Doe</h3>
             <h4 class="testimonial__subtitle">9 Time Escaper</h4>
@@ -132,7 +132,7 @@
         <div class="row__4">
           <div class="testimonial">
             <div class="testimonial__photo">
-              <img src="assets/images/testimonial-john.jpg">
+              <img class="lazyload" data-src="assets/images/testimonial-john.jpg">
             </div>
             <h3 class="testimonial__title">John Smith</h3>
             <h4 class="testimonial__subtitle">4 Time Escaper</h4>
@@ -142,7 +142,7 @@
         <div class="row__4">
           <div class="testimonial testimonial--last">
             <div class="testimonial__photo">
-              <img src="assets/images/testimonial-cat.jpg">
+              <img class="lazyload" data-src="assets/images/testimonial-cat.jpg">
             </div>
             <h3 class="testimonial__title">Cat McKitty</h3>
             <h4 class="testimonial__subtitle">6 Time Escaper</h4>
@@ -176,6 +176,6 @@
     <div class="modal__close">X</div>
   </div>
   
-  <script src="C:/Users/user/Desktop/Projects/travel-site/app/temp/scripts/App.js"></script>
+  <script src="./temp/scripts/App.js"></script>
 </body>
 </html>
